--- a/index.ipynb
+++ b/index.ipynb
@@ -644,7 +644,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    return "
+    "    return len(resta)"
    ]
   },
   {
