--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -644,7 +644,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    return len(restaurant['price']) < len(alternative['rating'])"
+    "    return len(restaurant['rating']) < len(alternative['rating'])"
    ]
   },
   {
