--- a/index.ipynb
+++ b/index.ipynb
@@ -763,7 +763,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    return "
+    "    return rest"
    ]
   },
   {
